1. header.jsp, footer.jsp, side.jsp 컴포넌트 분리 작업 2. NoticeDAO의 쿼리문 정렬 방식 수정 3. side.jsp 작업 4. update.jsp 작업

--- a/jspGameSite/src/main/webapp/WEB-INF/web.xml
+++ b/jspGameSite/src/main/webapp/WEB-INF/web.xml
@@ -50,5 +50,23 @@
   	<url-pattern>/news/noticeDetail</url-pattern>
   </servlet-mapping>
   
+  <servlet>
+  	<servlet-name>update</servlet-name>
+  	<jsp-file>/WEB-INF/news/update.jsp</jsp-file>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>update</servlet-name>
+  	<url-pattern>/news/update</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+  	<servlet-name>updateDetail</servlet-name>
+  	<jsp-file>/WEB-INF/news/updateDetail.jsp</jsp-file>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>updateDetail</servlet-name>
+  	<url-pattern>/news/updateDetail</url-pattern>
+  </servlet-mapping>
+  
   
 </web-app>
