1. event.jsp 작업 2. myuCustom.css 수정 및 추가 3. header.jsp container 클래스 제거 4. news 폴더 하위 jsp 파일들 & side.jsp col-l 속성 절댓값으로 변경 작업중 	<section>의 flex-c 및 하위에 남아있는 col-l 속성도 마저 수정 예정

--- a/jspGameSite/src/main/webapp/WEB-INF/web.xml
+++ b/jspGameSite/src/main/webapp/WEB-INF/web.xml
@@ -68,5 +68,23 @@
   	<url-pattern>/news/updateDetail</url-pattern>
   </servlet-mapping>
   
+  <servlet>
+  	<servlet-name>event</servlet-name>
+  	<jsp-file>/WEB-INF/news/event.jsp</jsp-file>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>event</servlet-name>
+  	<url-pattern>/news/event</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+  	<servlet-name>eventDetail</servlet-name>
+  	<jsp-file>/WEB-INF/news/eventDetail.jsp</jsp-file>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>eventDetail</servlet-name>
+  	<url-pattern>/news/eventDetail</url-pattern>
+  </servlet-mapping>
+  
   
 </web-app>
