--- a/jspGameSite/src/main/webapp/WEB-INF/web.xml
+++ b/jspGameSite/src/main/webapp/WEB-INF/web.xml
@@ -24,12 +24,39 @@
   </servlet-mapping>
   
   <servlet>
+  	<servlet-name>loginAction</servlet-name>
+  	<jsp-file>/WEB-INF/loginAction.jsp</jsp-file>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>loginAction</servlet-name>
+  	<url-pattern>/loginAction</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+  	<servlet-name>logoutAction</servlet-name>
+  	<jsp-file>/WEB-INF/logoutAction.jsp</jsp-file>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>logoutAction</servlet-name>
+  	<url-pattern>/logoutAction</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
   	<servlet-name>register</servlet-name>
   	<jsp-file>/WEB-INF/register.jsp</jsp-file>
   </servlet>
   <servlet-mapping>
   	<servlet-name>register</servlet-name>
   	<url-pattern>/register</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+  	<servlet-name>regAction</servlet-name>
+  	<jsp-file>/WEB-INF/regAction.jsp</jsp-file>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>regAction</servlet-name>
+  	<url-pattern>/regAction</url-pattern>
   </servlet-mapping>
   
   <servlet>
