1. MemberDAO.java에 getMember 메서드 추가 2. 댓글인 Reply.java 생성 3. eventDetail.jsp 댓글파트 작업 및 관련 css myCustom.css에 추가 4. notice.jsp, update.jsp의 for문 코드 간결하게 수정 5. web.xml에 서블릿 경로 추가

--- a/jspGameSite/src/main/webapp/WEB-INF/web.xml
+++ b/jspGameSite/src/main/webapp/WEB-INF/web.xml
@@ -113,5 +113,14 @@
   	<url-pattern>/news/eventDetail</url-pattern>
   </servlet-mapping>
   
+  <servlet>
+  	<servlet-name>commentAction</servlet-name>
+  	<jsp-file>/WEB-INF/commentAction.jsp</jsp-file>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>commentAction</servlet-name>
+  	<url-pattern>/commentAction</url-pattern>
+  </servlet-mapping>
+  
   
 </web-app>
