1. 댓글 작성 로직 작성 	- replyWriteAction.jsp 생성 	- replyDAO의 write 메서드 작성 	- eventDetail.jsp 댓글 작성 관련 코드 수정

--- a/jspGameSite/src/main/webapp/WEB-INF/web.xml
+++ b/jspGameSite/src/main/webapp/WEB-INF/web.xml
@@ -114,12 +114,12 @@
   </servlet-mapping>
   
   <servlet>
-  	<servlet-name>commentAction</servlet-name>
-  	<jsp-file>/WEB-INF/commentAction.jsp</jsp-file>
+  	<servlet-name>replyWriteAction</servlet-name>
+  	<jsp-file>/WEB-INF/replyWriteAction.jsp</jsp-file>
   </servlet>
   <servlet-mapping>
-  	<servlet-name>commentAction</servlet-name>
-  	<url-pattern>/commentAction</url-pattern>
+  	<servlet-name>replyWriteAction</servlet-name>
+  	<url-pattern>/replyWriteAction</url-pattern>
   </servlet-mapping>
   
   
