--- a/jspGameSite/src/main/webapp/WEB-INF/web.xml
+++ b/jspGameSite/src/main/webapp/WEB-INF/web.xml
@@ -122,5 +122,13 @@
   	<url-pattern>/replyWriteAction</url-pattern>
   </servlet-mapping>
   
+    <servlet>
+  	<servlet-name>replyDeleteAction</servlet-name>
+  	<jsp-file>/WEB-INF/replyDeleteAction.jsp</jsp-file>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>replyDeleteAction</servlet-name>
+  	<url-pattern>/replyDeleteAction</url-pattern>
+  </servlet-mapping>
   
 </web-app>
